--- a/src/frontend/styles.css
+++ b/src/frontend/styles.css
@@ -13,3 +13,13 @@
 .list-style-none{
     list-style:none;
 }
+
+.align-left{
+    text-align:left;
+    padding-left:1rem;
+}
+
+.align-right{
+    text-align:right;
+    padding-right:1rem;
+}
